--- a/ThesisFull_antiplagiat.tex
+++ b/ThesisFull_antiplagiat.tex
@@ -128,62 +128,62 @@
 
 \begin{document}
 
-\begin{titlepage}
-	\newgeometry{top=20mm,bottom=15mm,left=25mm,right=15mm}
-	\begin{center}
-		Министерство науки и высшего образования Российской Федерации\\
-		Санкт-Петербургский политехнический университет Петра Великого\\
-		Институт прикладной математики и механики
-	\end{center}
-	
-	\vspace{5mm}
-	
-	\begin{flushleft}
-		\rule{10cm}{0pt} {Работа допущена к защите}\\
-		\rule{10cm}{0pt} Заведующий кафедрой\\
-		\rule{10cm}{0pt} <<Прикладная математика>>\\
-		\vspace{4mm}
-		\rule{10cm}{0pt} \rule{3.6cm}{0.5pt} М.\,Е.~Фролов\\
-		\vspace{2mm}
-		\rule{10cm}{0pt} "\rule{0.8cm}{0.5pt}" \rule{3.7cm}{0.5pt} 2019 г.
-	\end{flushleft}
-	
-	\vspace{22mm}
-	
-	\begin{center}
-		{\bf ВЫПУСКНАЯ КВАЛИФИКАЦИОННАЯ РАБОТА МАГИСТРА}\\
-		\vspace{5mm} 
-		{\bf ПРОДОЛЬНЫЕ ВОЛНЫ ДЕФОРМАЦИИ В НЕЛИНЕЙНО УПРУГИХ ВОЛНОВОДАХ}\\
-		\vspace{5mm}
-		по направлению 01.04.02 «Прикладная математика и информатика»\\
-		по образовательной программе 01.04.02\_01 <<Математическое моделирование>>
-	\end{center}
+%\begin{titlepage}
+%	\newgeometry{top=20mm,bottom=15mm,left=25mm,right=15mm}
+%	\begin{center}
+%		Министерство науки и высшего образования Российской Федерации\\
+%		Санкт-Петербургский политехнический университет Петра Великого\\
+%		Институт прикладной математики и механики
+%	\end{center}
+%	
+%	\vspace{5mm}
+%	
+%	\begin{flushleft}
+%		\rule{10cm}{0pt} {Работа допущена к защите}\\
+%		\rule{10cm}{0pt} Заведующий кафедрой\\
+%		\rule{10cm}{0pt} <<Прикладная математика>>\\
+%		\vspace{4mm}
+%		\rule{10cm}{0pt} \rule{3.6cm}{0.5pt} М.\,Е.~Фролов\\
+%		\vspace{2mm}
+%		\rule{10cm}{0pt} "\rule{0.8cm}{0.5pt}" \rule{3.7cm}{0.5pt} 2019 г.
+%	\end{flushleft}
+%	
+%	\vspace{22mm}
+%	
+%	\begin{center}
+%		{\bf ВЫПУСКНАЯ КВАЛИФИКАЦИОННАЯ РАБОТА МАГИСТРА}\\
+%		\vspace{5mm} 
+%		{\bf ПРОДОЛЬНЫЕ ВОЛНЫ ДЕФОРМАЦИИ В НЕЛИНЕЙНО УПРУГИХ ВОЛНОВОДАХ}\\
+%		\vspace{5mm}
+%		по направлению 01.04.02 «Прикладная математика и информатика»\\
+%		по образовательной программе 01.04.02\_01 <<Математическое моделирование>>
+%	\end{center}
+%
+%	\vspace{20mm}
+%	\begin{flushleft}
+%	\begin{tabularx}{\linewidth}{Xr}
+%		Выполнил & \\
+%		студент гр. 23641/1 & Ф.\,E.~Гарбузов\\ 
+%		\vspace{3mm}
+%		Руководитель & \\ 
+%		проф., д.т.н. & Б.\,С.~Григорьев\\ 
+%		\vspace{3mm}
+%		Научный консультант  & \\ 
+%		к.ф.-м.н. & Я.\,М.~Бельтюков
+%	\end{tabularx} 
+%	\end{flushleft}
+%	
+%	\vspace{30mm}
+%	
+%	\begin{center}
+%		Санкт-Петербург\\2019
+%	\end{center}
+%	
+%\end{titlepage}
 
-	\vspace{20mm}
-	\begin{flushleft}
-	\begin{tabularx}{\linewidth}{Xr}
-		Выполнил & \\
-		студент гр. 23641/1 & Ф.\,E.~Гарбузов\\ 
-		\vspace{3mm}
-		Руководитель & \\ 
-		проф., д.т.н. & Б.\,С.~Григорьев\\ 
-		\vspace{3mm}
-		Научный консультант  & \\ 
-		к.ф.-м.н. & Я.\,М.~Бельтюков
-	\end{tabularx} 
-	\end{flushleft}
-	
-	\vspace{30mm}
-	
-	\begin{center}
-		Санкт-Петербург\\2019
-	\end{center}
-	
-\end{titlepage}
 
 
-
-\newpage
+%\newpage
 \thispagestyle{empty}
 \begin{center}
 	\textbf{РЕФЕРАТ}
@@ -192,7 +192,7 @@
 На 45 с., 13 рис., 1 табл.
 
 \vspace{3mm}
-\hspace{-\parindent}НЕЛИНЕЙНАЯ ТЕОРИЯ УПРУГОСТИ, НЕЛИНЕЙНЫЕ ВОЛНЫ, ОБЪЁМНЫЕ ВОЛНЫ ДЕФОРМАЦИИ, СОЛИТОНЫ, МОДЕЛЬ ТИПА БУССИНЕСКА, ЧИСЛЕННОЕ МОДЕЛИРОВАНИЕ, ПСЕВДОСПЕКТРАЛЬНЫЙ МЕТОД
+\hspace{-\parindent}нелинейная теория упругости, нелинейные волны, объёмные волны деформации, солитоны, модель типа буссинеска, численное моделирование, псевдоспектральный метод
 \vspace{3mm}
 
 Выведены две новые асимптотические модели типа Буссинеска, описывающие длинные нелинейные продольные волны деформации в стержнях круглого сечения. Эти модели обобщены на случай ненулевой осесимметричной нагрузки на боковой поверхности, а также на случай предварительно растянутого стержня. Проведено сравнение дисперсионных свойств и солитонных решений новых моделей с моделями, полученными в прежних работах.
@@ -208,12 +208,12 @@
 \hyphenation{BOUS-SINESQ}
 
 \vspace{3mm}
-\hspace{-\parindent}NONLINEAR ELASTICITY, NONLINEAR WAVES, BULK STRAIN WAVES, SOLITONS, \\BOUSSINESQ-TYPE MODEL, NUMERICAL SIMULATION, PSEUDOSPECTRAL METHOD
+\hspace{-\parindent}nonlinear elasticity, nonlinear waves, bulk strain waves, solitons, boussinesq-type model, numerical simulation, pseudospectral method
 \vspace{3mm}
 
 Two new Boussinesq-type models describing long nonlinear longitudinal strain waves in elastic rods of circular cross section derived. These models extended to include axially symmetric loading on the lateral surface and longitudinal pre-stretch. The dispersive properties and solitary wave solutions of these models compared with the ones of existing models.
 
-A pseudospectral method applied to perform numerical simulation of the full three-dimensional equations of motion in nonlinearly elastic rod. A series of numerical experiments is conducted in order to excite and compare solitons of Boussinesq-type model and the full model.
+Pseudospectral method applied to perform numerical simulation of the full three-dimensional equations of motion in nonlinearly elastic rod. A series of numerical experiments is conducted in order to excite and compare solitons of Boussinesq-type model and the full model.
 
 
 \newpage
@@ -1509,7 +1509,7 @@ P_{rr} = 0.3 \cosh^{-2}\lb\frac{t}{10}\rb \cosh^{-2}\lb\frac{x}{10}\rb\mbox{ГП
 
 Настоящая работа предполагает продолжение исследования нелинейных волн деформации. Во-первых, представляет интерес получение асимптотических моделей в волноводах другой геометрии: в стержне прямоугольного сечения, в тонкостенной оболочке и других. Во-вторых, естественным продолжением этого исследования является попытка учёта в модели вязкоупругого эффекта, приводящего к диссипации энергии и затуханию волн. В-третьих, построенный многодоменный псевдоспектральный метод позволяет легко моделировать волны в многослойных структурах, в частности, в композитах с неидеальным контактом слоёв. Результаты такого исследования могут быть применены в дефектоскопии для обнаружения областей расслоения многослойных композитов.
 
-\newpage
+
 \section*{Список публикаций}
 \addcontentsline{toc}{chapter}{Список публикаций}
 \begin{enumerate}[{label=[\arabic{*}]}]
@@ -1523,89 +1523,89 @@ P_{rr} = 0.3 \cosh^{-2}\lb\frac{t}{10}\rb \cosh^{-2}\lb\frac{x}{10}\rb\mbox{ГП
 
 
 
-\begin{thebibliography}{99}
-	\addcontentsline{toc}{chapter}{Список источников}
-	% Nonlinear waves: history review and general books 
-	\bibitem{Dodd} Додд Р., Эйлбек Дж., Гиббон Дж., Моррис Х. Солитоны и нелинейные волновые уравнения. М.: «Мир», 1988.
-	%\bibitem{Ablowitz} Абловиц М., Сигур Х. Солитоны и метод обратной задачи. М.: Мир, 1987.
-	\bibitem{Ablowitz2011} Ablowitz M.\,J., Nonlinear dispersive waves: asymptotic analysis and solitons, Cambridge: Cambridge University Press, 2011.
-	%\bibitem{Russel} Scott Russell J. \textit{Report on waves}, Rept. 14th meetings of the British Assoc. for the Advancement of Science. London: John Murray, 1844. P. 311–390.
-	%\bibitem{Boussinesq} Boussinesq J. The?orie de l’intumescence liquid apple?e onde solitarie ou de translation se propagent dans un canal rectangularie // Comptes Rendus. 1871. Vol. 72. P. 755–759.
-	%\bibitem{Korteweg} Korteweg D.J., de Vries G. On the change of form of long waves advancing in a rectangular channel, and on a new type of long stationary waves // Phil. Mag. 1895. Vol. 39. P. 422–443.
-	%\bibitem{BBM} T.B. Benjamin, J.L. Bona, and J.J. Mahony, Model equations for long waves in nonlinear dispersive systems, \textit{Philos. Trans. R. Soc. London, Ser. A} 272(1220) (1972) 47-78.
-	\bibitem{Zabusky} Zabusky N.J., Kruskal M.D. Interaction of «solitons» in a collisionless plasma and the reccurence of initial states, Physical Review Letters, 1965, 15 (6), 240--243.
-	\bibitem{GardnerIST} Gardner C.\,S., Greene J.\,M., Kruskal M.\,D., Miura R.\,M., Method for Solving the Korteweg-de Vries Equation, Physical Review Letters, 1967, 19 (19), 1095--1097.
-	\bibitem{Zakharov} Захаров В.\,Е., Манаков С.\,В., Новиков С.\,П., Питаевский Л.\,П., Теория солитонов: метод обратной задачи, М.: <<Наука>>, 1980. 
-	
-	% Numerical methods review
-	\bibitem{Taha} Taha T.\,R., Ablowitz M.\,I., Analytical and numerical aspects of certain nonlinear evolution equations. III. Numerical, Korteweg-de Vries equation, Journal of Computational Physics, 1984, 55 (2), 231--253.
-	\bibitem{Christov} Christov C.\,I., Conservative Difference Scheme for Boussinesq Model of Surface Waves, Proceedings ICFD 5, 1996, 343--349.
-	\bibitem{Kolkovska} Kolkovska N., Dimova M., A new conservative finite difference scheme for Boussinesq paradigm equation, Central European Journal of Mathematics, 2012, 10 (3), 1159--1171.
-	%\bibitem{Dutykh_KdV} Dutykh D., Katsaounis T., Mitsotakis D., Finite volume methods for unidirectional dispersive wave models, электронная публикация, arXiv/HAL
-	\bibitem{Dutykh_Boussinesq} Dutykh D., Katsaounis T., Mitsotakis D., Finite volume schemes for Boussinesq type equations, электронная публикация, https://arxiv.org/abs/1101.1728
-	\bibitem{Karczewska} Karczewska A., Rozmej P., Szczecinski M., Boguniewicz B., A finite element method for extended KdV equations, International Journal of Applied Mathematics and Computer Science, 2016, 26 (3), 555--567.
-	\bibitem{Gottlieb_Orszag} Gottlieb D., Orszag S.\,A., Numerical Analysis of Spectral Methods: Theory and Applications, Philadelphia: SIAM, 1977.
-	%\bibitem{Trefethen} Trefethen L.\,N., Spectral Methods in MATLAB, SIAM, Philadelphia, 2000.
-	\bibitem{Canuto2007} Canuto C. et al., Spectral Methods. Evolution to Complex Geomenties and Applications to Fluid Dynamics, Berlin: Springer-Verlag, 2007.
-	
-	% Nonlinear mechanics %
-	\bibitem{LurieNL} Лурье А.\,И., Нелинейная теория упругости, М.: <<Наука>>, 1980.
-	\bibitem{Murnaghan} Murnaghan F.\,D., Finite deformation of an elastic solid, New York: John Wiley and Sons, 1951.
-	\bibitem{Bergstrom} Bergstr\"{o}m J., Mechanics of Solid Polymers, Amsterdam: William Andrew Publishing, 2015.
-	\bibitem{Yu} Yu Y.-Y., Generalized Hamilton's Principle and Variational Equation of Motion in Nonlinear Elasticity Theory, With Application to Plate Theory, Journal of the Acoustical Society of America, 1964, 36, 111--120.
-	
-	% Nonlinear waves
-	%\bibitem{Maugin} G.A. Maugin, \textit{Nonlinear waves in elastic crystals}, Oxford University Press, Oxford, 1999.
-	%\bibitem{Dai} Dai~H.-H., Z. Cai, Phase transition in a slender cylinder composed of an incompressible elastic material. I. Asymptotic model equation, \textit{Proc. Roy. Soc. A} 462 (2006) 419-438.
-	%\bibitem{M}
-	%A. Mayer, 
-	%Surface acoustic waves in nonlinear elastic media, \textit{Phys. Reports} 256 (1995) 257 - ?.
-	%Nonlinear surface acoustic waves: Theory, \textit{Ultrasonics} 48 (2008) 478-481.
-	%\bibitem{HL} P. Hess, A.M. Lomonosov, Solitary surface acoustic waves and bulk solitons in nanosecond and picosecond laser ultrasonics, \textit{Ultrasonics} 50 (2010) 167-171.
-	%\bibitem{E1} J. Engelbrecht, A. Salupere and K. Tamm, Waves in microstructured solids and the Boussinesq paradigm, \textit{Wave Motion} 48 (2011) 717-726.
-	%\bibitem{P} A. Pau, F. Lanza di Scalea, Nonlinear guided wave propagation in prestressed plates, \textit{J. Acoust. Soc. Am.} 137 (2015) 1529-1540.
-	%\bibitem{E2} T. Peets, K. Tamm, J. Engelbrecht, On the role of nonlinearities in the Boussinesq-type wave equations, \textit{Wave Motion} 71 (2017) 113-119.
-	\bibitem{S_book} Samsonov A.\,M., Strain solitons in solids and how to construct them, Boca Raton: Chapman \& Hall/CRC, 2001.
-	\bibitem{P_book} Porubov A.\,V., Amplification of nonlinear strain waves in solids, Singapore: World Scientific, 2003.
-	\bibitem{NS} Nariboli G.\,A., Sedov A., Burgers-Korteweg de Vries equation for viscoelastic rods and plates, J. Math. Anal. Appl., 1970, 32 (3), 661--677.
-	\bibitem{OS} Ostrovsky~L.\,A., Sutin~A.\,M., Nonlinear elastic waves in rods, PMM, 1977, 41, 531--537.
-	\bibitem{Love} Love A\,.E.\,H., A treatise on the mathematical theory of elasticity, London: Cambridge University Press, 1927.
-	%\bibitem{S1} Samsonov~A.\,M., Structural optimization in nonlinear wave propagation problems. In: \textit{Structural Optimization under Dynamical Loading. Seminar and Workshop for Junior Scientists}, U. Lepik ed., Tartu University Press, 75-76 (1982).
-	%\bibitem{S2} Samsonov~A.\,M., Soliton evolution in a rod with variable cross section, \textit{Sov. Physics - Doklady} 29 (1984) 586-587.
-	\bibitem{SP} Порубов А\,.В., Самсонов А.\,М. Письма в ЖТФ, 1993, 19(12), 26--29.
-	\bibitem{PV}
-	Porubov~A.\,V., M.G. Velarde, Dispersive - dissipative solitons in nonllinear solids, Wave Motion, 2000, 31(3), 197--207.
-	\bibitem{E_book} Ерофеев В.\,И., Кажаев В.\,В., Семерикова Н.\,П., Волны в	стержнях. Дисперсия. Диссипация. Нелинейность. М.: Физматлит, 2002. -- 208 с.
-	\bibitem{DF} Dai~H.-H., Fan~X., Asymptotically approximate model equations for weakly nonlinear long waves in compressible elastic rods and their comparisons with other simplified model equations, Maths. Mechs. Solids, 2004, 9, 61--79.
-	\bibitem{DC} Dai~H.-H., and Z. Cai, Uniform asymptotic analysis for transient waves in a pre-stressed compressible hyperelastic rod, Acta Mechanica, 2000, 139, 201--230.
-	\bibitem{KSZ} Khusnutdinova~K.\,R., Samsonov~A.\,M., A.S. Zakharov, Nonlinear layered lattice model and generalized solitary waves in imperfectly bonded structures, Phys. Rev. E, 2009, 79(5), 056606.
-	\bibitem{KS} Khusnutdinova~K.\,R., Samsonov~A.\,M., Fission of a longitudinal strain solitary wave in a delaminated bar, Phys. Rev. E, 2008, 77, 066603.
-	\bibitem{KT1} Khusnutdinova~K.\,R., Tranter~M.\,R., Modelling of nonlinear wave scattering in a delaminated elastic bar, Proc. R. Soc. A, 2015, 471, 20150584.
-	\bibitem{KT2} Khusnutdinova~K.\,R., Tranter~M.\,R., On radiating solitary waves in bi-layers with delamination and coupled Ostrovsky equations, Chaos, 2017, 27, 013112.
-	\bibitem{JAP2010} Dreiden~G.\,V., Khusnutdinova~K.\,R., Samsonov~A.\,M., and Semenova~I.\,V., Splitting induced generation of soliton trains in layered waveguides, J. Appl. Phys., 2010, 107, 034909.
-	\bibitem{JAP2012} Dreiden G.\,V., Khusnutdinova~K.\,R., Samsonov~A.\,M., and Semenova~I.\,V., Bulk strain solitary waves in bonded layered polymeric bars with delamination, J. Appl. Phys., 2012, 112, 063516.
-	%\bibitem{ML} J.-F. Mercier, B. Lombard, A two-way model for nonlinear acoustic waves in a non-unfirm lattice of Helmholtz resonators, \textit{Wave Motion} 72 (2017) 260-275.
-	%\bibitem{AM} R. Arredondo and J.P. McHugh, Mean displacement near an interface in a nonlinear string, \textit{SIAM J. Appl. Math.} 78 (2018) 1470-1488.
-	%\bibitem{DS} M. Destrade and G. Saccomandi, Nonlinear transverse waves in deformed dispersive solids, \textit{Wave Motion} 45 (2008) 325-336.
-	\bibitem{Garbuzov} Garbuzov F.\,E., Khusnutdinova K.\,R., Semenova I.\,V., On Boussinesq-type models for long longitudinal waves in elastic rods, Wave Motion, 2019, 88 129--143.
-	
-	%\bibitem{DSS} M. Destrade, G. Saccomandi, I. Sigura, Methodical fitting for mathematical models of rubber-like materials, \textit{Proc. R. Soc. A} 473 (2017) 20160811.
-	%\bibitem{Ogden} R.W. Ogden, \textit{Non-linear elastic deformations}, Dover, Mineola, New York, 1984.
-	\bibitem{bostrm2000} Bostr\"{o}m A., On wave equations for elastic rods, ZAMM, 2000, 80 (4), 245--251. 
-	\bibitem{HughesKelly} Hughes D.\,S., Kelly J.\,L., Second order elastic deformation of solids, Phys. Rev., 1953, 92,  1145--1149.
-	\bibitem{ADO} Abiza Z., Destrade M., Ogden R.\,W., Large acoustoelastic effect, Wave Motion, 2012, 49, 364--374.
-	\bibitem{Boyd2011} Boyd J.\,P., Yu F., Comparing seven spectral methods for interpolation and for solving the Poisson equation in a disk: Zernike polynomials, Logan–Shepp ridge polynomials, Chebyshev–Fourier Series, cylindrical Robert functions, Bessel–Fourier expansions, square-to-disk conformal mapping and radial basis functions, Journal of Computational Physics, 2011, 230\,(4) 1408--1438.
-%	\bibitem{PAT} A.V. Pichugin, H. Askes, A. Tyas, Asymptotic equivalence of homogenisation procedures and fine-tuning of continuum theories, \textit{J. Sound and Vibration} 313 92008) 858-874.
-%	\bibitem{ADKM} I.V. Andrianov, V.D. Danishevsky, J.D. Kaplunov and B. Markert, Wide frequency higher-order dynamic model for transient waves in a lattice, In: I.V. Andrianov et al. ed., ``Problems of Nonlinear Mechanics and Physics of Materials", Springer, 2019.
-%	\bibitem{TP1988} G. V. Dreiden, Yu. I. Ostrovsky, A. M. Samsonov, I. V. Semenova, E. V. Sokurinskaya, Formation and propagation of strain solitons in nonlinearly elastic solid, \textit{Techn. Phys.} 58 (1988) 2040-2017. (in Russian)
-%	\bibitem{Dreiden-TP-2008} Dreiden~G.\,V., Samsonov~A.\,M., Semenova~I.\,V., Evolution of bulk strain solitons in long polymeric waveguides, \textit{Techn. Phys.} 53 (2008) 540-546.
-%	\bibitem{TPL-Polycarb}  Dreiden~G.\,V., Samsonov~A.\,M., Semenova~I.\,V., Bulk elastic strain solitons in polycarbonate, \textit{Techn. Phys. Lett.} 37 (2011) 500-502.
-%	\bibitem{JAP2008} Dreiden~G.\,V., Khusnutdinova~K.\,R., Samsonov~A.\,M., Semenova~I.\,V., Comparison of the effect of cyanoacrylate- and polyurethane-based adhesives on a longitudinal strain solitary wave in layered polymethylmethacrylate waveguides, \textit{J. Appl. Phys.} 104 (2008) 086106.
-%	\bibitem{APL2014} Dreiden~G.\,V., Samsonov~A.\,M., Semenova~I.\,V., and A.G. Shvartz, Strain solitary waves in a thin-walled waveguide, \textit{Appl. Phys. Lett.} 105 (2014) 211906.
-%	\bibitem{APL2018} A.V. Belashov, Y.M. Beltukov, N.V. Petrov, Samsonov~A.\,M., Semenova~I.\,V., Indirect assessment of bulk strain soliton velocity in opaque solids, \textit{Appl. Phys. Lett.} 112 (2018) 121903.
-%	\bibitem{Strain2010} Dreiden~G.\,V., Khusnutdinova~K.\,R., Samsonov~A.\,M., Semenova~I.\,V., Longitudinal strain solitary wave in a two-layered polymeric bar, \textit{Strain} 46 (2010) 589-598.
-%	\bibitem{SPIE2018} A.V. Belashov, Y.M. Beltukov, Semenova~I.\,V., Pump-probe digital holography for monitoring of long bulk nonlinear strain waves in solid waveguides, \textit{Proc. SPIE} 10678 (2018) 1067810.
-\end{thebibliography}
+%\begin{thebibliography}{99}
+%	\addcontentsline{toc}{chapter}{Список источников}
+%	% Nonlinear waves: history review and general books 
+%	\bibitem{Dodd} Додд Р., Эйлбек Дж., Гиббон Дж., Моррис Х. Солитоны и нелинейные волновые уравнения. М.: «Мир», 1988.
+%	%\bibitem{Ablowitz} Абловиц М., Сигур Х. Солитоны и метод обратной задачи. М.: Мир, 1987.
+%	\bibitem{Ablowitz2011} Ablowitz M.\,J., Nonlinear dispersive waves: asymptotic analysis and solitons, Cambridge: Cambridge University Press, 2011.
+%	%\bibitem{Russel} Scott Russell J. \textit{Report on waves}, Rept. 14th meetings of the British Assoc. for the Advancement of Science. London: John Murray, 1844. P. 311–390.
+%	%\bibitem{Boussinesq} Boussinesq J. The?orie de l’intumescence liquid apple?e onde solitarie ou de translation se propagent dans un canal rectangularie // Comptes Rendus. 1871. Vol. 72. P. 755–759.
+%	%\bibitem{Korteweg} Korteweg D.J., de Vries G. On the change of form of long waves advancing in a rectangular channel, and on a new type of long stationary waves // Phil. Mag. 1895. Vol. 39. P. 422–443.
+%	%\bibitem{BBM} T.B. Benjamin, J.L. Bona, and J.J. Mahony, Model equations for long waves in nonlinear dispersive systems, \textit{Philos. Trans. R. Soc. London, Ser. A} 272(1220) (1972) 47-78.
+%	\bibitem{Zabusky} Zabusky N.J., Kruskal M.D. Interaction of «solitons» in a collisionless plasma and the reccurence of initial states, Physical Review Letters, 1965, 15 (6), 240--243.
+%	\bibitem{GardnerIST} Gardner C.\,S., Greene J.\,M., Kruskal M.\,D., Miura R.\,M., Method for Solving the Korteweg-de Vries Equation, Physical Review Letters, 1967, 19 (19), 1095--1097.
+%	\bibitem{Zakharov} Захаров В.\,Е., Манаков С.\,В., Новиков С.\,П., Питаевский Л.\,П., Теория солитонов: метод обратной задачи, М.: <<Наука>>, 1980. 
+%	
+%	% Numerical methods review
+%	\bibitem{Taha} Taha T.\,R., Ablowitz M.\,I., Analytical and numerical aspects of certain nonlinear evolution equations. III. Numerical, Korteweg-de Vries equation, Journal of Computational Physics, 1984, 55 (2), 231--253.
+%	\bibitem{Christov} Christov C.\,I., Conservative Difference Scheme for Boussinesq Model of Surface Waves, Proceedings ICFD 5, 1996, 343--349.
+%	\bibitem{Kolkovska} Kolkovska N., Dimova M., A new conservative finite difference scheme for Boussinesq paradigm equation, Central European Journal of Mathematics, 2012, 10 (3), 1159--1171.
+%	%\bibitem{Dutykh_KdV} Dutykh D., Katsaounis T., Mitsotakis D., Finite volume methods for unidirectional dispersive wave models, электронная публикация, arXiv/HAL
+%	\bibitem{Dutykh_Boussinesq} Dutykh D., Katsaounis T., Mitsotakis D., Finite volume schemes for Boussinesq type equations, электронная публикация, https://arxiv.org/abs/1101.1728
+%	\bibitem{Karczewska} Karczewska A., Rozmej P., Szczecinski M., Boguniewicz B., A finite element method for extended KdV equations, International Journal of Applied Mathematics and Computer Science, 2016, 26 (3), 555--567.
+%	\bibitem{Gottlieb_Orszag} Gottlieb D., Orszag S.\,A., Numerical Analysis of Spectral Methods: Theory and Applications, Philadelphia: SIAM, 1977.
+%	%\bibitem{Trefethen} Trefethen L.\,N., Spectral Methods in MATLAB, SIAM, Philadelphia, 2000.
+%	\bibitem{Canuto2007} Canuto C. et al., Spectral Methods. Evolution to Complex Geomenties and Applications to Fluid Dynamics, Berlin: Springer-Verlag, 2007.
+%	
+%	% Nonlinear mechanics %
+%	\bibitem{LurieNL} Лурье А.\,И., Нелинейная теория упругости, М.: <<Наука>>, 1980.
+%	\bibitem{Murnaghan} Murnaghan F.\,D., Finite deformation of an elastic solid, New York: John Wiley and Sons, 1951.
+%	\bibitem{Bergstrom} Bergstr\"{o}m J., Mechanics of Solid Polymers, Amsterdam: William Andrew Publishing, 2015.
+%	\bibitem{Yu} Yu Y.-Y., Generalized Hamilton's Principle and Variational Equation of Motion in Nonlinear Elasticity Theory, With Application to Plate Theory, Journal of the Acoustical Society of America, 1964, 36, 111--120.
+%	
+%	% Nonlinear waves
+%	%\bibitem{Maugin} G.A. Maugin, \textit{Nonlinear waves in elastic crystals}, Oxford University Press, Oxford, 1999.
+%	%\bibitem{Dai} Dai~H.-H., Z. Cai, Phase transition in a slender cylinder composed of an incompressible elastic material. I. Asymptotic model equation, \textit{Proc. Roy. Soc. A} 462 (2006) 419-438.
+%	%\bibitem{M}
+%	%A. Mayer, 
+%	%Surface acoustic waves in nonlinear elastic media, \textit{Phys. Reports} 256 (1995) 257 - ?.
+%	%Nonlinear surface acoustic waves: Theory, \textit{Ultrasonics} 48 (2008) 478-481.
+%	%\bibitem{HL} P. Hess, A.M. Lomonosov, Solitary surface acoustic waves and bulk solitons in nanosecond and picosecond laser ultrasonics, \textit{Ultrasonics} 50 (2010) 167-171.
+%	%\bibitem{E1} J. Engelbrecht, A. Salupere and K. Tamm, Waves in microstructured solids and the Boussinesq paradigm, \textit{Wave Motion} 48 (2011) 717-726.
+%	%\bibitem{P} A. Pau, F. Lanza di Scalea, Nonlinear guided wave propagation in prestressed plates, \textit{J. Acoust. Soc. Am.} 137 (2015) 1529-1540.
+%	%\bibitem{E2} T. Peets, K. Tamm, J. Engelbrecht, On the role of nonlinearities in the Boussinesq-type wave equations, \textit{Wave Motion} 71 (2017) 113-119.
+%	\bibitem{S_book} Samsonov A.\,M., Strain solitons in solids and how to construct them, Boca Raton: Chapman \& Hall/CRC, 2001.
+%	\bibitem{P_book} Porubov A.\,V., Amplification of nonlinear strain waves in solids, Singapore: World Scientific, 2003.
+%	\bibitem{NS} Nariboli G.\,A., Sedov A., Burgers-Korteweg de Vries equation for viscoelastic rods and plates, J. Math. Anal. Appl., 1970, 32 (3), 661--677.
+%	\bibitem{OS} Ostrovsky~L.\,A., Sutin~A.\,M., Nonlinear elastic waves in rods, PMM, 1977, 41, 531--537.
+%	\bibitem{Love} Love A\,.E.\,H., A treatise on the mathematical theory of elasticity, London: Cambridge University Press, 1927.
+%	%\bibitem{S1} Samsonov~A.\,M., Structural optimization in nonlinear wave propagation problems. In: \textit{Structural Optimization under Dynamical Loading. Seminar and Workshop for Junior Scientists}, U. Lepik ed., Tartu University Press, 75-76 (1982).
+%	%\bibitem{S2} Samsonov~A.\,M., Soliton evolution in a rod with variable cross section, \textit{Sov. Physics - Doklady} 29 (1984) 586-587.
+%	\bibitem{SP} Порубов А\,.В., Самсонов А.\,М. Письма в ЖТФ, 1993, 19(12), 26--29.
+%	\bibitem{PV}
+%	Porubov~A.\,V., M.G. Velarde, Dispersive - dissipative solitons in nonllinear solids, Wave Motion, 2000, 31(3), 197--207.
+%	\bibitem{E_book} Ерофеев В.\,И., Кажаев В.\,В., Семерикова Н.\,П., Волны в	стержнях. Дисперсия. Диссипация. Нелинейность. М.: Физматлит, 2002. -- 208 с.
+%	\bibitem{DF} Dai~H.-H., Fan~X., Asymptotically approximate model equations for weakly nonlinear long waves in compressible elastic rods and their comparisons with other simplified model equations, Maths. Mechs. Solids, 2004, 9, 61--79.
+%	\bibitem{DC} Dai~H.-H., and Z. Cai, Uniform asymptotic analysis for transient waves in a pre-stressed compressible hyperelastic rod, Acta Mechanica, 2000, 139, 201--230.
+%	\bibitem{KSZ} Khusnutdinova~K.\,R., Samsonov~A.\,M., A.S. Zakharov, Nonlinear layered lattice model and generalized solitary waves in imperfectly bonded structures, Phys. Rev. E, 2009, 79(5), 056606.
+%	\bibitem{KS} Khusnutdinova~K.\,R., Samsonov~A.\,M., Fission of a longitudinal strain solitary wave in a delaminated bar, Phys. Rev. E, 2008, 77, 066603.
+%	\bibitem{KT1} Khusnutdinova~K.\,R., Tranter~M.\,R., Modelling of nonlinear wave scattering in a delaminated elastic bar, Proc. R. Soc. A, 2015, 471, 20150584.
+%	\bibitem{KT2} Khusnutdinova~K.\,R., Tranter~M.\,R., On radiating solitary waves in bi-layers with delamination and coupled Ostrovsky equations, Chaos, 2017, 27, 013112.
+%	\bibitem{JAP2010} Dreiden~G.\,V., Khusnutdinova~K.\,R., Samsonov~A.\,M., and Semenova~I.\,V., Splitting induced generation of soliton trains in layered waveguides, J. Appl. Phys., 2010, 107, 034909.
+%	\bibitem{JAP2012} Dreiden G.\,V., Khusnutdinova~K.\,R., Samsonov~A.\,M., and Semenova~I.\,V., Bulk strain solitary waves in bonded layered polymeric bars with delamination, J. Appl. Phys., 2012, 112, 063516.
+%	%\bibitem{ML} J.-F. Mercier, B. Lombard, A two-way model for nonlinear acoustic waves in a non-unfirm lattice of Helmholtz resonators, \textit{Wave Motion} 72 (2017) 260-275.
+%	%\bibitem{AM} R. Arredondo and J.P. McHugh, Mean displacement near an interface in a nonlinear string, \textit{SIAM J. Appl. Math.} 78 (2018) 1470-1488.
+%	%\bibitem{DS} M. Destrade and G. Saccomandi, Nonlinear transverse waves in deformed dispersive solids, \textit{Wave Motion} 45 (2008) 325-336.
+%	\bibitem{Garbuzov} Garbuzov F.\,E., Khusnutdinova K.\,R., Semenova I.\,V., On Boussinesq-type models for long longitudinal waves in elastic rods, Wave Motion, 2019, 88 129--143.
+%	
+%	%\bibitem{DSS} M. Destrade, G. Saccomandi, I. Sigura, Methodical fitting for mathematical models of rubber-like materials, \textit{Proc. R. Soc. A} 473 (2017) 20160811.
+%	%\bibitem{Ogden} R.W. Ogden, \textit{Non-linear elastic deformations}, Dover, Mineola, New York, 1984.
+%	\bibitem{bostrm2000} Bostr\"{o}m A., On wave equations for elastic rods, ZAMM, 2000, 80 (4), 245--251. 
+%	\bibitem{HughesKelly} Hughes D.\,S., Kelly J.\,L., Second order elastic deformation of solids, Phys. Rev., 1953, 92,  1145--1149.
+%	\bibitem{ADO} Abiza Z., Destrade M., Ogden R.\,W., Large acoustoelastic effect, Wave Motion, 2012, 49, 364--374.
+%	\bibitem{Boyd2011} Boyd J.\,P., Yu F., Comparing seven spectral methods for interpolation and for solving the Poisson equation in a disk: Zernike polynomials, Logan–Shepp ridge polynomials, Chebyshev–Fourier Series, cylindrical Robert functions, Bessel–Fourier expansions, square-to-disk conformal mapping and radial basis functions, Journal of Computational Physics, 2011, 230\,(4) 1408--1438.
+%%	\bibitem{PAT} A.V. Pichugin, H. Askes, A. Tyas, Asymptotic equivalence of homogenisation procedures and fine-tuning of continuum theories, \textit{J. Sound and Vibration} 313 92008) 858-874.
+%%	\bibitem{ADKM} I.V. Andrianov, V.D. Danishevsky, J.D. Kaplunov and B. Markert, Wide frequency higher-order dynamic model for transient waves in a lattice, In: I.V. Andrianov et al. ed., ``Problems of Nonlinear Mechanics and Physics of Materials", Springer, 2019.
+%%	\bibitem{TP1988} G. V. Dreiden, Yu. I. Ostrovsky, A. M. Samsonov, I. V. Semenova, E. V. Sokurinskaya, Formation and propagation of strain solitons in nonlinearly elastic solid, \textit{Techn. Phys.} 58 (1988) 2040-2017. (in Russian)
+%%	\bibitem{Dreiden-TP-2008} Dreiden~G.\,V., Samsonov~A.\,M., Semenova~I.\,V., Evolution of bulk strain solitons in long polymeric waveguides, \textit{Techn. Phys.} 53 (2008) 540-546.
+%%	\bibitem{TPL-Polycarb}  Dreiden~G.\,V., Samsonov~A.\,M., Semenova~I.\,V., Bulk elastic strain solitons in polycarbonate, \textit{Techn. Phys. Lett.} 37 (2011) 500-502.
+%%	\bibitem{JAP2008} Dreiden~G.\,V., Khusnutdinova~K.\,R., Samsonov~A.\,M., Semenova~I.\,V., Comparison of the effect of cyanoacrylate- and polyurethane-based adhesives on a longitudinal strain solitary wave in layered polymethylmethacrylate waveguides, \textit{J. Appl. Phys.} 104 (2008) 086106.
+%%	\bibitem{APL2014} Dreiden~G.\,V., Samsonov~A.\,M., Semenova~I.\,V., and A.G. Shvartz, Strain solitary waves in a thin-walled waveguide, \textit{Appl. Phys. Lett.} 105 (2014) 211906.
+%%	\bibitem{APL2018} A.V. Belashov, Y.M. Beltukov, N.V. Petrov, Samsonov~A.\,M., Semenova~I.\,V., Indirect assessment of bulk strain soliton velocity in opaque solids, \textit{Appl. Phys. Lett.} 112 (2018) 121903.
+%%	\bibitem{Strain2010} Dreiden~G.\,V., Khusnutdinova~K.\,R., Samsonov~A.\,M., Semenova~I.\,V., Longitudinal strain solitary wave in a two-layered polymeric bar, \textit{Strain} 46 (2010) 589-598.
+%%	\bibitem{SPIE2018} A.V. Belashov, Y.M. Beltukov, Semenova~I.\,V., Pump-probe digital holography for monitoring of long bulk nonlinear strain waves in solid waveguides, \textit{Proc. SPIE} 10678 (2018) 1067810.
+%\end{thebibliography}
 
 
 \chapter*{\vspace{-25mm}Приложение 1. \\Длинные формулы}
