--- a/ThesisPresentation.tex
+++ b/ThesisPresentation.tex
@@ -458,7 +458,8 @@ v(A) = c\sqrt{1 + A\frac{2\beta_1}{3}}
 \begin{frame}{Заключение}
 %Результаты:
 \begin{itemize}
-	\item Выведено новое асимптотическое уравнение типа Буссинеска с~внешним воздействием, описывающая продольные волны в~нелинейно упругих стержнях круглого сечения.
+	\item Выведено 
+	новое асимптотическое уравнение типа Буссинеска с~внешним воздействием, описывающая продольные волны в~нелинейно упругих стержнях круглого сечения.
 	\item Построен метод, позволяющий численно моделировать полные уравнения движения стержня в рамках нелинейной теории упругости.
 	\item Численно решён ряд начально-краевых задач, показывающих применимость выведенного уравнения типа Буссинеска для моделирования возникновения солитонов деформации.
 \end{itemize}
